--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,26 @@
 url: http://blog.nafis1.my.id
 title: "Nafis' Blog"
 description: "Thanks for visiting!"
+
 permalink: /:title
-paginate: 5
+paginate: 20
+
+source              : .
+destination         : ./_site
+collections_dir     : .
+plugins_dir         : _plugins # takes an array of strings and loads plugins in that order
+layouts_dir         : _layouts
+data_dir            : _data
+includes_dir        : _includes
+sass:
+  sass_dir: _sass
+collections:
+  posts:
+    output          : true
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+      type: "posts" # previously `post` in Jekyll 2.2.
+    values:
+      layout: "default"
