--- a/_config.yml
+++ b/_config.yml
@@ -4,16 +4,8 @@ description: "Thanks for visiting!"
 
 permalink: /:title
 paginate: 5
+paginate_path       : /page/:num
 
-source              : .
-destination         : ./_site
-collections_dir     : .
-plugins_dir         : _plugins # takes an array of strings and loads plugins in that order
-layouts_dir         : _layouts
-data_dir            : _data
-includes_dir        : _includes
-sass:
-  sass_dir: _sass
 collections:
   posts:
     output          : true
