--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "Nafis' Blog"
 description: "Thanks for visiting!"
 author: "mnafisalmukhdi1"
 
-permalink: /:categories/:title
+permalink: /:title
 paginate: 20
 paginate_path       : /page/:num
 
