--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,10 @@ author: "mnafisalmukhdi1"
 
 plugins:
   - jekyll-feed
+  - jekyll-paginate
 
 permalink: :title
-paginate: 20
+paginate: 5
 paginate_path       : page/:num
 
 collections:
