--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://nafis1.my.id/blog
+url: https://blog.nafis1.my.id
 title: "Nafis' Blog"
 description: "Thanks for visiting!"
 author: "mnafisalmukhdi1"
