--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,30 @@
 url: https://blog.nafis1.my.id
-title: "Nafis' Blog"
-description: "Thanks for visiting!"
+title: "Blog Nafis"
+description: "Terima kasih sudah berkunjung!"
 author: "mnafisalmukhdi1"
+
+bulan:
+  - Januari
+  - Februari
+  - Maret
+  - April
+  - Mei
+  - Juni
+  - Juli
+  - Agustus
+  - September
+  - Oktober
+  - November
+  - Desember
+
+hari:
+  - Ahad
+  - Senin
+  - Selasa
+  - Rabu
+  - Kamis
+  - Jumat
+  - Sabtu
 
 plugins:
   - jekyll-feed
